Wed Nov 27 13:54:55 2002  D A Hanvey  <d.hanvey@qub.ac.uk>

	* orbsvcs/tests/Log/Basic_Log_Test/client.cpp:
	* orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp:
	* orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.h:
	* orbsvcs/tests/Log/Basic_Log_Test/Makefile:

	Documentation changes to files.
	

Wed Nov 27 13:48:19 2002  D A Hanvey  <d.hanvey@qub.ac.uk>

	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.cpp:
	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.h:
	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp:
	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.h:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.h:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Server.cpp:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.cpp:
	* orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.cpp:

	Documentation changes to files.
	

Wed Nov 27 13:36:11 2002  D A Hanvey  <d.hanvey@qub.ac.uk>

	* orbsvcs/examples/Log/Basic/main.cpp: 
	* orbsvcs/examples/Log/Basic/TLS_Client.cpp:
	* orbsvcs/examples/Log/Basic/TLS_Client.h:
	* orbsvcs/examples/Log/Event/Event_Consumer.cpp:
	* orbsvcs/examples/Log/Event/Event_Consumer.h:
	* orbsvcs/examples/Log/Event/Event_Supplier.cpp:
	* orbsvcs/examples/Log/Event/Event_Supplier.h:
	* orbsvcs/examples/Log/Notify/Notify_Consumer.cpp:
	* orbsvcs/examples/Log/Notify/Notify_Consumer.h:
	* orbsvcs/examples/Log/Notify/Notify_Supplier.cpp:
	* orbsvcs/examples/Log/Notify/Notify_Supplier.h:
	* orbsvcs/examples/Log/RTEvent/RTEvent_Consumer.cpp:
	* orbsvcs/examples/Log/RTEvent/RTEvent_Consumer.h:
	* orbsvcs/examples/Log/RTEvent/RTEvent_Supplier.cpp:
	* orbsvcs/examples/Log/RTEvent/RTEvent_Supplier.h:

	Documenation changes to files.
